@@ -178,7 +178,11 @@ public class AppointmentController {
             .toDate(toDate)
             .search(normalizedSearch)
             .build();
-        Pageable pageable = PageRequest.of(Math.max(page, 0), Math.min(Math.max(size, 1), 200), Sort.by(Sort.Direction.DESC, SORT_APPOINTMENT_DATE));
+        // Sonar S6890 (Pattern 10): Math.clamp replaces the
+        // Math.min(Math.max(size, 1), 200) idiom for clarity.
+        // Math.max(page, 0) is still needed because page has no upper
+        // bound — only a floor.
+        Pageable pageable = PageRequest.of(Math.max(page, 0), Math.clamp(size, 1, 200), Sort.by(Sort.Direction.DESC, SORT_APPOINTMENT_DATE));
         Page<AppointmentResponseDTO> resultPage = appointmentService.searchAppointments(
             filter, pageable, locale, getUsername(authentication));
         HttpHeaders headers = new HttpHeaders();
